istio-rules/debug-rewrite.yaml
# ServiceEntry to service running on local machine
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-http
spec:
  hosts:
    - 4ed463fe.ngrok.io
  ports:
    - number: 80
      name: http-ext
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: NONE
---
# Redirect on debug header
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quote-default
spec:
  hosts:
    - quote-service
  http:
  - match:
    - headers:
        X-debug:
          exact: "true"
    redirect:
      authority: 4ed463fe.ngrok.io
  - route:
    - destination:
        host: quote-service
        subset: v1
