istio-rules/fault-injection-delay-images.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: image-default
spec:
  hosts:
  - image-service
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percent: 100
    route:
    - destination:
        host: image-service
