istio-rules/fault-injection-error-quote.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quote-default
spec:
  hosts:
  - quote-service
  http:
  - route:
    - destination:
        host: quote-service
        subset: v2
    fault:
      abort:
        httpStatus: 500
        percent: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: death-star-default
spec:
  hosts:
    - death-star-service
  http:
    - route:
      - destination:
          host: death-star-service
          subset: v2
