istio-rules/request-routing-all-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quote-default
spec:
  hosts:
  - quote-service
  http:
  - route:
    - destination:
        host: quote-service
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: death-star-default
spec:
  hosts:
  - death-star-service
  http:
  - route:
    - destination:
        host: death-star-service
        subset: v2
