istio-rules/request-routing-chrome-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quote-default
spec:
  hosts:
  - quote-service
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: quote-service
        subset: v2
  - route:
    - destination:
        host: quote-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: death-star-default
spec:
  hosts:
  - death-star-service
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: death-star-service
        subset: v2
  - route:
    - destination:
        host: death-star-service
        subset: v1
