istio-rules/starwars-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: star-wars-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.istiodemo.xyz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-service
spec:
  hosts:
  - "*.istiodemo.xyz"
  gateways:
  - star-wars-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ui-service
        port:
          number: 3000
